--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.14"
+    "@astrojs/tailwind": "^2.1.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
+    "astro": "^1.6.14",
+    "astro-heroicons": "^0.3.0",
+    "mdast-util-to-string": "^3.1.0",
+    "reading-time": "^1.5.0",
+    "tailwindcss": "^3.2.4"
   }
 }
