--- a/src/settings.json
+++ b/src/settings.json
@@ -3,8 +3,8 @@
   "language": "de",
   "name": "Leonid's Blog",
   "titles": {
-    "posts-home": "Privater Kram",
-    "posts-work": "Irgendwas mit Arbeit"
+    "posts-home": "Leonid.at/Home",
+    "posts-work": "Leonid.at/Work"
   },
   "categories": {
     "mobility": "Mobilität",
