Fixing the favicon

--- a/src/settings.json
+++ b/src/settings.json
@@ -10,6 +10,7 @@
     "mobility": "Mobilität",
     "technology": "Technologie",
     "one-more": "One More",
-    "category": "KategorieX"
+    "category": "KategorieX",
+    "hobby-philosoph": "Hobbyphilosoph"
   }
 }
