--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/rss": "^2.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -19,6 +20,10 @@
     "astro-heroicons": "^0.3.0",
     "mdast-util-to-string": "^3.1.0",
     "reading-time": "^1.5.0",
+    "sanitize-html": "^2.8.1",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@types/sanitize-html": "^2.8.0"
   }
 }
