Fixing layout problems and wrting article

--- a/src/settings.json
+++ b/src/settings.json
@@ -12,6 +12,8 @@
     "technology": "Technologie",
     "one-more": "One More",
     "category": "KategorieX",
-    "hobby-philosoph": "Hobbyphilosoph"
+    "hobby-philosoph": "Hobbyphilosoph",
+    "project-management": "Projektmanagement",
+    "product-management": "Produktmanagement"
   }
 }
