--- a/src/settings.json
+++ b/src/settings.json
@@ -14,6 +14,8 @@
     "category": "KategorieX",
     "hobby-philosoph": "Hobbyphilosoph",
     "project-management": "Projektmanagement",
-    "product-management": "Produktmanagement"
+    "product-management": "Produktmanagement",
+    "documentation": "Dokumentation",
+    "collaboration": "Zusammenarbeit"
   }
 }
